Revert "Merge pull request #174 from banda-health/feature/go-2923"
This reverts commit b06bf22f0337d2895cc1164462ebdd4b6b4273af, reversing
changes made to 3dabe116c8d2df7572653147f52a829e4a8120f5.